--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "MVC-app-integration-tests-example",
   "main": "index.js",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mocha": "^7.1.2",
-    "node-fetch": "^2.6.0",
-    "pug": "^2.0.4"
+    "body-parser": "^1.20.2",
+    "express": "^4.19.1",
+    "mocha": "^10.3.0",
+    "node-fetch": "^2.7.0",
+    "pug": "^3.0.2"
   },
   "scripts": {
     "test": "mocha tests/*.js",
+    "test-npm-security": "npm audit",
     "start": "node index.js"
   }
 }
