--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,3 +38,14 @@ jobs:
       run: npm install
     - name: Run integration tests
       run: npm test
+
+  deploy:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    needs: test-integration
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.SERVICE_ID }}
+          api-key: ${{ secrets.RENDER_TOKEN }}
